# tai_pan

./: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  start.bat
.superpowers/sdd/: task-3-report.md
app/: __init__.py  client.py  config.py  download_registry.py  main.py  models.py
app/cloud/: __init__.py  admin_cli.py  app.py  config.py  db.py  dependencies.py  maintenance.py  repository.py  schemas.py  security.py  storage.py  tmp_service.py
app/cloud/routes/: __init__.py  admin.py  auth.py  cloud_files.py  links.py  settings.py  tmp_files.py
app/static/: app.css  app.js  cloud.css  cloud.html  cloud.js  index.html
deploy/: deploy.sh  docker-compose.yml  env.example
deploy/nginx/: Dockerfile  cloud.claudcode.xyz.conf  cloud.claudcode.xyz.http.conf  cloud.claudcode.xyz.maintenance.conf  file-proxy.conf
docs/: cloud-deployment.md
docs/superpowers/plans/: 2026-07-16-file-download-delete.md  2026-07-16-local-tmp-link-manager.md  2026-07-17-cloud-multi-user.md
scripts/: start.sh  wait-and-open.ps1
tests/: test_client.py  test_config.py  test_download_registry.py  test_frontend_contract.py  test_launchers.py  test_routes.py  test_static.py
tests/cloud/: test_admin.py  test_auth_routes.py  test_cloud_files.py  test_cloud_static.py  test_config.py  test_db.py  test_deployment_contract.py  test_maintenance.py  test_mode_selection.py  test_repository.py  test_security.py  test_storage.py  test_tmp_tenants.py
tests/e2e/: app.spec.js  cloud.spec.js
(+3 files in other folders)
